force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/TimeTrade_SF1__Internal_Attendee__c.object-meta.xml
<CustomObject>
    <description>Shows the meeting invitation for corresponding Internal Attendees</description>
    <label>TimeTrade Internal Attendee</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Internal Attendees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeTrade Internal Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>