force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Email__c</fullName>
    <formula>TimeTrade_SF1__Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>