force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Group_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Group_Name__c</fullName>
    <description>This defines the public group name to use for pooled availability</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>