force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__GroupID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GroupID__c</fullName>
    <label>Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>