force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Invitation__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitation</label>
    <referenceTo>TimeTrade_SF1__Invitation__c</referenceTo>
    <relationshipLabel>Internal Attendees</relationshipLabel>
    <relationshipName>TimeTrade_Internal_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>