force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meeting_Invitation_Internal_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>