force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Optional__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to denote if an attendee is optional or not. If checked, the attendee will be omitted from the availability call.</inlineHelpText>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>