force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Organizer__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Organizer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organizer</label>
    <type>Checkbox</type>
</CustomField>