force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Pooled_Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Pooled_Availability_Type__c</fullName>
    <label>Pooled Availability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Random</fullName>
                <default>true</default>
                <label>Random</label>
            </value>
            <value>
                <fullName>Round-Robin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>