force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Resource_Text_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Resource_Text_Name__c</fullName>
    <formula>BLANKVALUE (TimeTrade_SF1__Group_Name__c, TimeTrade_SF1__Name__r.FirstName + &#39; &#39; + TimeTrade_SF1__Name__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Text Name</label>
    <type>Text</type>
</CustomField>