force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__ResourceName__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__ResourceName__c</fullName>
    <formula>IF( 
OR(ISNULL(TimeTrade_SF1__GroupID__c), ISBLANK( TimeTrade_SF1__GroupID__c ) ),

HYPERLINK( TimeTrade_SF1__Name__c , TimeTrade_SF1__Name__r.FirstName+&#39; &#39;+TimeTrade_SF1__Name__r.LastName),

HYPERLINK(&#39;/setup/own/groupdetail.jsp?id=&#39;+TimeTrade_SF1__GroupID__c+&#39;&amp;setupid=PublicGroups&#39; ,  TimeTrade_SF1__Group_Name__c)  
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>