force-app/main/default/objects/TimeTrade_SF1__Internal_Attendee__c/fields/TimeTrade_SF1__Title__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Title__c</fullName>
    <formula>IF( 
OR(ISBLANK( TimeTrade_SF1__GroupID__c ),ISNULL( TimeTrade_SF1__GroupID__c )), 
TimeTrade_SF1__Name__r.Title, 
&#39;Resource Pool&#39; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>